--- a/inf_bayes.ipynb
+++ b/inf_bayes.ipynb
@@ -56,7 +56,7 @@
         "id": "AqN7j9bEFlm5"
       },
       "source": [
-        "[Estatística não paramétrica](http://en.wikipedia.org/wiki/Non-parametric_statistics) é um ramo da estatística preocupado com a análise de dados sem assumir que os dados são gerados a partir de qualquer distribuição de probabilidade particular. Uma vez que fazem menos suposições sobre o processo que gerou os dados, os testes não paramétricos são geralmente mais aplicáveis ​​do que seus equivalentes paramétricos. Métodos não paramétricos também são geralmente mais [robustos](http://en.wikipedia.org/wiki/Robust_statistics) do que suas contrapartes paramétricas. Essas vantagens são balanceadas pelo fato de que quando os dados são gerados por uma distribuição de probabilidade conhecida, os testes paramétricos apropriados são mais [poderosos](http://en.wikipedia.org/wiki/Parametric_statistics).\n",
+        "Estatística não paramétrica é um ramo da estatística preocupado com a análise de dados sem assumir que os dados são gerados a partir de qualquer distribuição de probabilidade particular. Uma vez que fazem menos suposições sobre o processo que gerou os dados, os testes não paramétricos são geralmente mais aplicáveis ​​do que seus equivalentes paramétricos. Métodos não paramétricos também são geralmente mais robustos do que suas contrapartes paramétricas. Essas vantagens são balanceadas pelo fato de que quando os dados são gerados por uma distribuição de probabilidade conhecida, os testes paramétricos apropriados são mais [poderosos](http://en.wikipedia.org/wiki/Parametric_statistics).\n",
         "\n",
         "Neste artigo, vamos explorar uma abordagem bayesiana para regressão não paramétrica, que nos permite modelar funções complexas com suposições relativamente fracas."
       ]
@@ -72,7 +72,7 @@
         "\n",
         "Estudaremos o modelo $ y = f (x) + \\varepsilon $, onde $ f $ é a verdadeira função de regressão que desejamos modelar e $ \\varepsilon $ é o ruído gaussiano. Dadas as observações $ (x_1, y_1), \\ldots, (x_n, y_n) $ deste modelo, desejamos prever o valor de $ f $ nos novos valores de $ x $. Seja $ X = (x_1, \\ldots, x_n) ^ \\top $ o vetor coluna dos $ x $ -valores observados e, da mesma forma, seja $ Y = (y_1, \\ldots, y_n) ^ \\top $. Nosso objetivo é usar essas observações para prever o valor de $ f $ em qualquer ponto com o máximo de precisão possível.\n",
         "\n",
-        "A abordagem Bayesiana para este problema é calcular a [distribuição preditiva posterior](http://en.wikipedia.org/wiki/Posterior_predictive_distribution), $ p (f_ * | X, Y, x _ *) $ do valor de $ f $ em um ponto $ x _ * $. Com esta distribuição em mãos, nós, se necessário, empregamos maquinário de [teoria da decisão](http://en.wikipedia.org/wiki/Decision_theory) para produzir estimativas pontuais para o valor de $ f $ em $ x _ * $.\n",
+        "A abordagem Bayesiana para este problema é calcular a [distribuição preditiva posterior](http://en.wikipedia.org/wiki/Posterior_predictive_distribution), $ p (f_ * | X, Y, x _ *) $ do valor de $ f $ em um ponto $ x _ * $. Com esta distribuição em mãos, nós, se necessário, empregamos maquinário de teoria da decisão para produzir estimativas pontuais para o valor de $ f $ em $ x _ * $.\n",
         "\n",
         "Como a abordagem não paramétrica faz o mínimo possível de suposições sobre a função de regressão, um primeiro passo natural parece ser colocar uma distribuição anterior $\\pi(f) $ em todas as funções de regressão possíveis. Neste caso, a distribuição preditiva posterior é\n",
         "\n",
@@ -204,7 +204,7 @@
         "\n",
         "Em $ \\Sigma $, apenas o bloco superior esquerdo contém um termo de ruído. Os blocos superior direito e inferior esquerdo não têm termo de ruído porque as entradas de $ Y $ e $ Y _ * $ não estão correlacionadas (já que o ruído é i.i.d). O bloco inferior direito não tem termo de ruído porque queremos prever o valor real de $ f $ em cada ponto $ x_ *, i $, não seu valor mais ruído.\n",
         "\n",
-        "Aplicando a [distribuição condicional](http://en.wikipedia.org/wiki/Multivariate_normal_distribution#Conditional_distributions) nas observações $ Y = y $, obtemos $ Y_ * | Y = y $ é normal com média $ \\mu_y = k (X_ *, X) (k (X, X) + \\sigma ^ 2 I) ^ {- 1} y $ e covariância $ \\Sigma_y = k (X_ * , X_ *) - k (X_ *, X) (k (X, X) + \\sigma ^ 2 I) ^ {- 1} k (X, X _ *) $."
+        "Aplicando a distribuição condicional nas observações $ Y = y $, obtemos $ Y_ * | Y = y $ é normal com média $ \\mu_y = k (X_ *, X) (k (X, X) + \\sigma ^ 2 I) ^ {- 1} y $ e covariância $ \\Sigma_y = k (X_ * , X_ *) - k (X_ *, X) (k (X, X) + \\sigma ^ 2 I) ^ {- 1} k (X, X _ *) $."
       ]
     },
     {
@@ -340,7 +340,7 @@
         "id": "ll-_iqngFlm6"
       },
       "source": [
-        "Usar `BaseEstimator`como subclasse nos permite usar [ferramentas de validação cruzada](http://scikit-learn.org/stable/model_selection.html) do `scikit-learn`  para escolher os valores dos hiperparâmetros $ \\ell $ , $\\tau$ e $ \\sigma $."
+        "Usar `BaseEstimator`como subclasse nos permite usar ferramentas de validação cruzada do `scikit-learn`  para escolher os valores dos hiperparâmetros $ \\ell $ , $\\tau$ e $ \\sigma $."
       ]
     },
     {
